2007-06-22	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile, init.c: Clean up. Make name of TARFILE related symbols
	conditional based upon architecture. Change way desired object format
	is determined so all BSPs compile this test.

2007-06-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile: Remove tarfile when make clean.

2007-06-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* init.c: More warnings removed.

2007-06-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile, init.c, system.h: Now compiles reasonably cleanly with CVS
	head.

2007-06-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* init.c, system.h: confdefs.h should be rtems/confdefs.h

2007-06-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* init.c: Replace CONFIGURE_TEST_XXX with CONFIGURE_APPLICATION_XXX.

2000-12-14	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.