@@ -1,0 +1,12 @@
+<HTML>
+<HEAD><TITLE>RTEMS GoAhead Test Page</TITLE></HEAD>
+<BODY BGCOLOR="FFFFFF">
+<center>
+<H1>RTEMS GoAhead Web Server Test Page</H1>
+<A HREF="http://www.rtems.org">
+  <IMG align=center BORDER=0 SRC="rtems_logo.jpg" ALT="RTEMS"> </A>
+
+<P><big>Congratulations, you have successfully loaded your first page
+from the GoAhead Web Server running on RTEMS.</big></P>
+</center>
+</BODY></HTML>
