@@ -1,15 +1,0 @@
-<HTML>
-<HEAD><TITLE>RTEMS GoAhead Test Page</TITLE></HEAD>
-<BODY BGCOLOR="FFFFFF">
-<A HREF="http://www.oarcorp.com" target="Text Frame">
-  <IMG align=right BORDER=0 SRC="oaronly.jpg" ALT="OAR"> </A>
-<H1>RTEMS GoAhead Test Page</H1>
-<HR>
-<BODY>
-
-<P>Congratulations, you have successfully loaded your first page
-from the GoAhead Web Server running on RTEMS.</P>
-
-<HR>
-Copyright &copy; 1988-1999 <A HREF="http://www.oarcorp.com" target="Text Frame">OAR Corporation</A>
-</BODY></HTML>
